--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1"
